--- a/1-projekt-sass/zadanie-sass-przed/scss/layout/_header.scss
+++ b/1-projekt-sass/zadanie-sass-przed/scss/layout/_header.scss
@@ -1,5 +1,5 @@
 /***/
-/*==========  4.1 - Header styles  ==========*/
+/*==========  4.1 -  styles  ==========*/
 
 header.header-image {
     position: relative;
