--- a/1-projekt-sass/zadanie-sass-przed/scss/main.scss
+++ b/1-projekt-sass/zadanie-sass-przed/scss/main.scss
@@ -26,7 +26,7 @@
 *
 * 
 * + 4.0 - Layout
-* 		- 4.1 - Header styles
+* 		- 4.1 -  styles
 * 		- 4.2 - Main styles
 * 		- 4.3 - Nav styles
 * 		- 4.4 - Sidebar styles
