--- a/1-projekt-sass/zadanie-sass-przed/scss/theme/_single-post.scss
+++ b/1-projekt-sass/zadanie-sass-przed/scss/theme/_single-post.scss
@@ -23,7 +23,7 @@
 			margin-top: $baseline;
 
 			.fa-fw {
-				font-size:math.div($base-font-size, 2);
+				// font-size:calc($base-font-size / 2);
 				color: $color-primary;
 				width: $base-font-size;
 				font-variant: super;
