--- a/1-projekt-sass/zadanie-sass-przed/scss/utilities/_settings.scss
+++ b/1-projekt-sass/zadanie-sass-przed/scss/utilities/_settings.scss
@@ -28,9 +28,9 @@
 	$color-primary-darker: #88ba00;
 	$color-primary-darker-rgb: rgb(136,186,0);
 
-	$color-text-primary: #a5e200;
-	$color-text-primary-rgb: rgb(165,226,0);
-	$color-text-primary-darker: #88ba00;
+	$color-text-primary: #ffffff;
+	$color-text-primary-rgb: rgb(255, 255, 255);
+	$color-text-primary-darker: #ffffff;
 	$color-footer: #222222;
 
 	// Typography colors
@@ -43,7 +43,7 @@
 	$color-link-hover: #88ba00;
 
 	// Main element colors
-	$color-bg-main: #ffffff;
+	$color-bg-main: #f0f4dc;
 	$color-border: #dddddd;
 	$color-background: #f0f4dc;
 
