--- a/1-projekt-sass/zadanie-sass-przed/scss/theme/_one-page.scss
+++ b/1-projekt-sass/zadanie-sass-przed/scss/theme/_one-page.scss
@@ -27,7 +27,7 @@
                 width: 96px;
                 height: 96px;
                 border-radius: 100%;
-                line-height: $base-font-size * 4.5;
+                line-height: 96px;
                 background-color: $color-primary;
                 margin: $margin-none auto $baseline;
                 text-align: center;
@@ -147,9 +147,9 @@
                 height:100%;
                 opacity: 0;
                 background: $color-portfolio-hover;
-                -webkit-transition: all .35s;
-                -moz-transition: all .35s;
-                transition: all 1;
+                -webkit-transition: all 1s;
+                -moz-transition: all 1s;
+                transition: all 1s;
 
                 .portfolio-box-caption-content {
                     position: absolute;
