--- a/1-projekt-sass/zadanie-sass-przed/scss/theme/_icon.scss
+++ b/1-projekt-sass/zadanie-sass-przed/scss/theme/_icon.scss
@@ -17,7 +17,7 @@
 	.about-columns {
 		margin-bottom: $baseline * 2;
 
-		.icon-about-blue, .icon-about-bright, .icon-about-dark {
+		.icon-about-blue, -bright, .icon-about-dark {
 	        width: $base-font-size * 4.5;
 	        height: $base-font-size * 4.5;
 	        border-radius: 100%;
